# delta-ai

./: .gitignore  HANDOFF_CN.md  README.md  pyproject.toml
docs/: architecture.md
src/delta_ai/: __init__.py  __main__.py  config.py  main.py  offline.py  pipeline.py  stubs.py  types.py  visualization.py
src/delta_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/delta_ai/capture/: base.py  factory.py  mss_backend.py  roi.py
src/delta_ai/controller/: __init__.py  selector.py
src/delta_ai/detector/: __init__.py  base.py  debug_backend.py  factory.py  ultralytics_backend.py
src/delta_ai/input/: __init__.py  base.py  factory.py  pynput_backend.py
src/delta_ai/tracker/: __init__.py  base.py  simple_tracker.py
