[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-ai"
version = "0.1.0"
description = "Low-latency screen perception prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mss>=9.0,<10.0",
  "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
yolo = [
  "ultralytics>=8.2,<9.0",
]
input = [
  "pynput>=1.7,<2.0",
]

dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.4,<1.0",
]

[project.scripts]
delta-ai = "delta_ai.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
